Fix the wrong video position when container has text-align center prop

--- a/src/stylesheet/ovenplayer.less
+++ b/src/stylesheet/ovenplayer.less
@@ -237,6 +237,8 @@
 
     video {
       position: absolute;
+      left: 0;
+      top: 0;
       width: 100%;
       height : 100%;
     }
